--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         # Compile on Linux & Windows.
         os: 
-          - ubuntu-18.04
+          - ubuntu-latest
           - windows-latest
 
         sm_branch:
@@ -39,7 +39,7 @@ jobs:
           - csgo
 
         include:
-          - os: ubuntu-18.04
+          - os: ubuntu-latest
             os_short: linux
           - os: windows-latest
             os_short: win
